# pythondigest

./: .editorconfig  .gitignore  .landscape.yml  .pre-commit-config.yaml  .secrets.baseline  .travis.xml  .travis.yml  =0.6.28  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  humans.txt  local.infra.yml  local.yml  manage.py  pyproject.toml  requirements.in  requirements.txt  requirements_3.10.txt  requirements_3.4.txt  requirements_3.6.txt  robots.txt  setup.cfg  tox.ini  tpl.env
.envs/.local/: .postgres
.github/: dependabot.yml
.github/workflows/: backup.yml  ci.yml  main.yml  pull_request.yml  test.yml  tests.yml
advertising/: __init__.py  admin.py  apps.py  mixins.py  models.py
advertising/fixtures/: ad_align.yaml  ad_type.yaml
advertising/migrations/: 0001_initial.py  0002_alter_adalign_id_alter_adpage_id_alter_adtype_id_and_more.py
advertising/templatetags/: ads_tags.py
assets/css/: style.css  styles.css
conf/: asgi.py  dashboard.py  local_settings.py.template  mail.py  meta.py  pipeline.py  settings.py  urls.py  utils.py  views.py  wsgi.py
deploy/: Dockerfile  Dockerfile-build  Dockerfile-poetry  crontab  crontab.conf  docker_compose.prod.yml  docker_compose.yml  docker_compose_infra.yml  nginx.conf  supervisor_q_worker.conf  uwsgi.ini
deploy/django/: Dockerfile
deploy/postgres/: Dockerfile
digest/: __init__.py  admin.py  alchemyapi.py  apps.py  dashboards.py  forms.py  mixins.py  models.py  pub_digest.py  pub_digest_email.py  tests.py  urls.py  utils.py  utils_strip_url_trackers.py  views.py
digest/fixtures/: dev_issues.yaml  dev_items.yaml  dev_resource.yaml  parsing_rules.json  sections.yaml
digest/genai/: auto_announcement.py  chad.py  utils.py
digest/migrations/: 0001_initial.py  0002_auto_20140904_0901.py  0002_auto__add_field_issue_status.py  0003_auto_20141024_1520.py  0003_auto__add_field_item_version__add_field_resource_version__add_field_is.py  0004_auto__chg_field_item_section__chg_field_item_link.py  0004_item_modified_at.py  0005_auto_20150113_0900.py  0005_auto__add_field_section_habr_icon.py  0006_auto_20150113_1001.py  0006_auto__add_field_item_is_editors_choice__chg_field_resource_link.py  0006_auto__add_useremail__chg_field_resource_link.py  0007_auto_20150405_1654.py  0007_auto__add_field_item_user.py  0008_auto_20150724_0738.py  0008_auto__add_autoimportresource.py  0009_autoimportresource_language.py  0010_auto_20150730_0553.py  0011_auto_20150730_0556.py  0012_auto_20150730_0611.py  0013_auto_20150730_1613.py  0014_auto_20150731_0859.py  0015_auto_20150731_0859.py  0016_auto_20150731_1457.py  0017_parsingrules_is_activated.py  0018_package.py  0019_auto_20150805_1332.py  0020_auto_20150806_0554.py  0021_issue_tip.py  0022_auto_20150806_0905.py  0023_item_to_update.py  0024_auto_20150808_0825.py  0025_auto_20150813_0925.py  0026_auto_20150818_0556.py  0027_parsingrules_weight.py  0028_auto_20150825_1126.py  0029_auto_20150825_1202.py  0030_item_additionally.py  0031_auto_20150903_0550.py  0032_issue_announcement.py  (+24 more)
digest/templates/: add_news.html  issue.html  issues_list.html  news_item.html  news_list.html
digest/templatetags/: seo.py  video.py
digest/tests/: fixture_test_import_importpython_test_get_blocks.txt  fixture_test_import_importpython_test_get_latest_url.txt  fixture_test_import_news_test_get_tweets.txt  fixture_test_import_news_test_rss.txt  fixture_test_import_python_weekly_test_get_blocks.txt  test_autoitemresources.py  test_forms.py  test_import_importpython.py  test_import_news.py  test_import_news_rss.py  test_import_news_tweets.py  test_import_python_weekly.py  test_item.py
fabfile/: fabfile.py
frontend/: __init__.py  admin.py  apps.py  feeds.py  forms.py  models.py  urls.py  views.py
frontend/fixtures/: tips.yaml
frontend/migrations/: 0001_initial.py  0002_auto_20150805_1801.py  0003_alter_editormaterial_id_alter_tip_id.py
frontend/static/: index.html
frontend/templates/: 409.html  500.html  _messages.html  add_news.html  base.html  base_issue.html  disqus.html  editor_material_view.html  index.html  issue.html  issue_email.html  issue_habrahabr.html  issues_list.html  news_item.html  news_list.html  pagination.html  sitemap.html  subnav_base.html  top_menu.html
frontend/templatetags/: __init__.py  common.py
frontend/tests/: test_forms.py  test_models.py  test_views.py
jobs/: __init__.py  admin.py  apps.py  models.py  signals.py  tests.py  urls.py  utils.py  views.py
jobs/fixtures/: acceptedlist.yaml
jobs/migrations/: 0001_initial.py  0002_jobitem.py  0003_auto_20150901_1242.py  0004_jobfeed_is_activated.py  0005_auto_20150902_0600.py  0006_auto_20150902_0601.py  0007_auto_20150902_0605.py  0008_auto_20150903_0550.py
jobs/templates/: jobs_list.html
landings/: apps.py  urls.py  views.py
landings/fixtures/: django.yaml
landings/templatetags/: landings.py
subscribe/: admin.py  forms.py  models.py  views.py
subscribe/migrations/: 0001_initial.py
syncrss/: admin.py  models.py  tasks.py  updater.py
syncrss/migrations/: 0001_initial.py  0002_auto__chg_field_resourcerss_sync_date.py  0003_auto__add_field_rawitem_resource_rss__add_field_rawitem_language__add_.py  0004_auto__add_field_rawitem_section__add_field_rawitem_status.py
templates/: 404.html  409.html  add_news.html  base.html  email.html  index.html  issues_list.html  sitemap.html  subnav_base.html
templates/account/: base.html  delete.html  email_confirm.html  email_confirmation_sent.html  email_confirmed.html  login.html  logout.html  password_change.html  password_reset.html  password_reset_sent.html  password_reset_token.html  password_reset_token_fail.html  settings.html  signup.html  signup_closed.html
templates/blocks/: _adv.html  _adv_yandex.html  _disqus.html  _disqus_script.html  _favorite_items.html  _feed.html  _feed_item.html  _footer.html  _friends.html  _ga.html  _issue_anonce.html  _item.html  _jumb.html  _jumb_short.html  _menu.html  _messages.html  _money.html  _orphus.html  _pagination.html  _right_panel.html  _yandex_metrika.html
templates/micawber/: link.html  (+2 more)
(+111 files in other folders)
