[project]
name = "pythondigest"
version = "0.1.0"
description = ""
authors = [{ name = "Aleksandr Sapronov", email = "a@sapronov.me" }]
requires-python = ">=3.14,<3.15"
readme = "README.md"
dependencies = [
    "django[argon2]>=5.2.16,<6",
    "django-digg-paginator>=0.2.0,<0.3",
    "django-user-accounts>=3.3.2,<4",
    "django-taggit-autosuggest>=0.4.2,<0.5",
    "django-taggit>=6.1.0,<7",
    "django-modeladmin-reorder>=0.3.1,<0.4",
    "django-ckeditor>=6.7.3,<7",
    "django-siteblocks>=1.2.1,<2",
    "django-cachalot>=2.9.0,<3",
    "django-compressor>=4.5.1,<5",
    "django-secretballot>=2.0.0,<3",
    "django-likes",
    "django-debug-toolbar>=5.2.0,<6",
    "django-remdow>=0.0.9,<0.0.10",
    "requests>=2.34.2,<3",
    "lxml>=5.4.0,<6",
    "pyyaml>=6.0.2,<7",
    "beautifulsoup4>=4.15.0,<5",
    "feedparser>=6.0.11,<7",
    "pytils>=0.4.4,<0.5",
    "sorl-thumbnail>=12.11.0,<13",
    "urlobject>=2.4.3,<3",
    "micawber>=0.5.6,<0.6",
    "twx-botapi==3.6.1",
    "tweepy>=4.17.0,<5",
    "funcy>=2.0,<3",
    "pillow>=12.0.0,<13",
    "unidecode>=1.4.0,<2",
    "readability-lxml",
    "pymemcache>=4.0.0,<5",
    "django-browser-reload>=1.18.0,<2",
    "django-bootstrap3>=25.2,<26",
    "django-yaturbo>=1.0.1,<2",
    "django-environ>=0.12.1,<0.13",
    "django-redis>=7.0.0,<8",
    "sentry-sdk>=2.64.0,<3",
    "django-cache-memoize>=0.2.1,<0.3",
    "django-htmlmin>=0.11.0,<0.12",
    "uwsgi>=2.0.30,<3",
    "lingua-language-detector>=2.1.1,<3",
    "vk>=3.0,<4",
    "jinja2>=3.1.6,<4",
    "tqdm>=4.68.4,<5",
    "django-meta>=2.5.1,<3",
    "langchain-core>=1.4.9",
    "langchain-openai>=1.3.5",
    "psycopg[pool]>=3.3.4",
    "standard-imghdr>=3.13.0",
]

[dependency-groups]
test = [
    "django-stubs>=5.2.9,<7",
    "pytest>=8.4.1,<9",
    "pytest-sugar>=1.1.1,<2",
    "pytest-django>=4.12.0,<5",
    "factory-boy>=3.3.3,<4",
    "mock>=5.2.0,<6",
]
dev = [
    "coverage>=7.15.1,<8",
    "pylint-django>=2.8.0,<3",
    "pre-commit>=4.6.0,<5",
    "django-extra-checks>=0.16.1,<0.17",
    "django-migration-linter>=5.2.0,<6",
    "detect-secrets>=1.5.0,<2",
    "safety>=3.8.1,<4",
    "ruff>=0.15.21,<0.16",
]

[tool.uv]
package = false
default-groups = [
    "test",
    "dev",
]

[tool.uv.sources]
django-likes = { git = "https://github.com/axsapronov/django-likes.git", rev = "v2.0.3" }
readability-lxml = { git = "https://github.com/buriy/python-readability.git", rev = "701833ccb24f9a15b463434f78229e4d6daf1c79" }  # pragma: allowlist secret  # master, Python 3.14 support

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py314"
line-length = 119
exclude = [
    ".git",
    ".venv",
    "docs",
    "*/migrations/*",
    "*/static/CACHE/*",
]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "UP",
    "T20",
]
ignore = [
    "E203",
]

[tool.ruff.lint.isort]
known-first-party = ["conf", "digest", "frontend", "advertising", "jobs"]

[tool.ruff.format]
quote-style = "double"
